--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting Preview
+name: Deploy to Firebase Hosting Production
 
 on:
   push:
@@ -23,10 +23,9 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Deploy to Firebase Hosting Preview Channel
+      - name: Deploy to Firebase Hosting Production
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           projectId: vigontina-statsrt
-          channelId: preview
