--- a/.github/workflows/firebase-hosting-deploy.yml
+++ b/.github/workflows/firebase-hosting-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting Production
+name: Deploy to Firebase Hosting
 
 on:
   push:
@@ -8,10 +8,10 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
       - uses: actions/checkout@v3
-
+      
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
@@ -23,9 +23,10 @@ jobs:
       - name: Build app
         run: npm run build
 
-      - name: Deploy to Firebase Hosting Production
+      - name: Deploy to Firebase Hosting Preview Channel
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           projectId: vigontina-statsrt
+          channelId: preview
